--- a/Sprint_1/apps/Frontend/src/app/generos-pelicula/generos-pelicula.component.scss
+++ b/Sprint_1/apps/Frontend/src/app/generos-pelicula/generos-pelicula.component.scss
@@ -1,4 +1,5 @@
-@import "../node_modules/bootstrap/dist/css/bootstrap-grid.min.css";
+// @import "../node_modules/bootstrap/dist/css/bootstrap-grid.min.css";
+@import "bootstrap/dist/css/bootstrap-grid.min.css";
 /*Estilos de la barra*/
 .nav{
     background-color: #b00089;
