--- a/Sprint_1/apps/Frontend/src/app/login/login.component.scss
+++ b/Sprint_1/apps/Frontend/src/app/login/login.component.scss
@@ -1,4 +1,4 @@
-@import "../node_modules/bootstrap/dist/css/bootstrap-grid.min.css";
+@import "bootstrap/dist/css/bootstrap-grid.min.css";
 .container {
   background: #ffffff;
   padding: 2rem;
