--- a/Sprint_1/apps/Frontend/src/app/register/register.component.scss
+++ b/Sprint_1/apps/Frontend/src/app/register/register.component.scss
@@ -1,4 +1,5 @@
-@import "../node_modules/bootstrap/dist/css/bootstrap-grid.min.css";
+@import "bootstrap/dist/css/bootstrap-grid.min.css";
+
 .container {
   background: #ffffff;
   padding: 2rem;
